[project]
name = "hello-cdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib==2.185.0",
    "boto3>=1.37.24",
    "cdk-dynamo-table-view==0.2.488",
    "constructs>=10.0.0,<11.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "coverage>=7.6.10",
    "isort>=6.0.0",
    "mypy-boto3-dynamodb>=1.37.12",
    "prospector>=1.13.3",
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
lint = [
    "bandit>=1.8.3",
    "isort>=6.0.0",
    "prospector>=1.13.3",
    "pyright>=1.1.392.post0",
    "ruff>=0.9.2",
]

# tool pyright
[tool.pyright]
include = [
    "hello_cdk",
    "tests",
]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    "**/node_modules",
    "**/dist",
    "**/build",
    "**/.venv",
    "**/.env",
    "**/cdk.out",
]
